syntax = "proto3";

package message;
option go_package = "../../proto-gen/message";

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
}