syntax = "proto3";

package rpc;
option go_package = "../../proto-gen/rpc";
import "message/hello.proto";

service ExampleService {
  rpc SayHello (HelloRequest) returns (HelloResponse);
}
